<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="popular_movies_first_part">Popular Movies First Part</string>
    <string name="popular_movies_second_part">Popular Movies Second Part</string>
    <string name="super_duo">Super Duo</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone_design">Capstone Design</string>
    <string name="capstone_build">Capstone Build</string>

</resources>
